PRECiSA/frontend/pvs/generated/Frontend/PVS/ParRawPVSLang.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.6.1).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -Wno-incomplete-patterns -Wno-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Frontend.PVS.ParRawPVSLang
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Frontend.PVS.AbsRawPVSLang
import Frontend.PVS.LexRawPVSLang

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '#)'        { PT _ (TS _ 1)  }
  '#]'        { PT _ (TS _ 2)  }
  '('         { PT _ (TS _ 3)  }
  '(#'        { PT _ (TS _ 4)  }
  ')'         { PT _ (TS _ 5)  }
  '*'         { PT _ (TS _ 6)  }
  '+'         { PT _ (TS _ 7)  }
  ','         { PT _ (TS _ 8)  }
  '-'         { PT _ (TS _ 9)  }
  '->'        { PT _ (TS _ 10) }
  '/'         { PT _ (TS _ 11) }
  '/='        { PT _ (TS _ 12) }
  ':'         { PT _ (TS _ 13) }
  ':='        { PT _ (TS _ 14) }
  '<'         { PT _ (TS _ 15) }
  '<='        { PT _ (TS _ 16) }
  '='         { PT _ (TS _ 17) }
  '>'         { PT _ (TS _ 18) }
  '>='        { PT _ (TS _ 19) }
  'AND'       { PT _ (TS _ 20) }
  'BEGIN'     { PT _ (TS _ 21) }
  'ELSE'      { PT _ (TS _ 22) }
  'ELSIF'     { PT _ (TS _ 23) }
  'END'       { PT _ (TS _ 24) }
  'ENDIF'     { PT _ (TS _ 25) }
  'FALSE'     { PT _ (TS _ 26) }
  'FUNCTION'  { PT _ (TS _ 27) }
  'IF'        { PT _ (TS _ 28) }
  'IMPORTING' { PT _ (TS _ 29) }
  'IN'        { PT _ (TS _ 30) }
  'LAMBDA'    { PT _ (TS _ 31) }
  'LET'       { PT _ (TS _ 32) }
  'NOT'       { PT _ (TS _ 33) }
  'OR'        { PT _ (TS _ 34) }
  'SUBRANGE'  { PT _ (TS _ 35) }
  'THEN'      { PT _ (TS _ 36) }
  'THEORY'    { PT _ (TS _ 37) }
  'TRUE'      { PT _ (TS _ 38) }
  'TYPE'      { PT _ (TS _ 39) }
  'WITH'      { PT _ (TS _ 40) }
  '['         { PT _ (TS _ 41) }
  '[#'        { PT _ (TS _ 42) }
  ']'         { PT _ (TS _ 43) }
  '^'         { PT _ (TS _ 44) }
  '`'         { PT _ (TS _ 45) }
  'below'     { PT _ (TS _ 46) }
  'for'       { PT _ (TS _ 47) }
  'for_down'  { PT _ (TS _ 48) }
  'fparray64' { PT _ (TS _ 49) }
  'lambda'    { PT _ (TS _ 50) }
  'list'      { PT _ (TS _ 51) }
  '|'         { PT _ (TS _ 52) }
  L_doubl     { PT _ (TD $$)   }
  L_integ     { PT _ (TI $$)   }
  L_Id        { PT _ (T_Id $$) }

%%

Double  :: { Double }
Double   : L_doubl  { (read $1) :: Double }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

Id :: { Frontend.PVS.AbsRawPVSLang.Id }
Id  : L_Id { Frontend.PVS.AbsRawPVSLang.Id $1 }

ListId :: { [Frontend.PVS.AbsRawPVSLang.Id] }
ListId : Id { (:[]) $1 } | Id ',' ListId { (:) $1 $3 }

ElsIf :: { Frontend.PVS.AbsRawPVSLang.ElsIf }
ElsIf
  : 'ELSIF' Expr 'THEN' Expr { Frontend.PVS.AbsRawPVSLang.ElsIf $2 $4 }

ListElsIf :: { [Frontend.PVS.AbsRawPVSLang.ElsIf] }
ListElsIf : ElsIf { (:[]) $1 } | ElsIf ListElsIf { (:) $1 $2 }

LetElem :: { Frontend.PVS.AbsRawPVSLang.LetElem }
LetElem
  : Id '=' Expr { Frontend.PVS.AbsRawPVSLang.LetElem $1 $3 }
  | Id ':' Type '=' Expr { Frontend.PVS.AbsRawPVSLang.LetElemType $1 $3 $5 }

ListLetElem :: { [Frontend.PVS.AbsRawPVSLang.LetElem] }
ListLetElem
  : LetElem { (:[]) $1 } | LetElem ',' ListLetElem { (:) $1 $3 }

RecordElem :: { Frontend.PVS.AbsRawPVSLang.RecordElem }
RecordElem
  : Id ':=' Expr { Frontend.PVS.AbsRawPVSLang.RecordElem $1 $3 }

ListRecordElem :: { [Frontend.PVS.AbsRawPVSLang.RecordElem] }
ListRecordElem
  : RecordElem { (:[]) $1 }
  | RecordElem ',' ListRecordElem { (:) $1 $3 }

LambdaKeyWord :: { Frontend.PVS.AbsRawPVSLang.LambdaKeyWord }
LambdaKeyWord
  : 'LAMBDA' { Frontend.PVS.AbsRawPVSLang.LambdaWord1 }
  | 'lambda' { Frontend.PVS.AbsRawPVSLang.LambdaWord2 }

LambdaExpr :: { Frontend.PVS.AbsRawPVSLang.LambdaExpr }
LambdaExpr
  : LambdaKeyWord '(' Id ':' 'SUBRANGE' '(' Expr ',' Expr ')' ',' Id ':' Type ')' ':' Expr { Frontend.PVS.AbsRawPVSLang.Lambda $1 $3 $7 $9 $12 $14 $17 }

ListExpr :: { [Frontend.PVS.AbsRawPVSLang.Expr] }
ListExpr : Expr { (:[]) $1 } | Expr ',' ListExpr { (:) $1 $3 }

Expr :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr
  : Expr1 { $1 }
  | 'LET' ListLetElem 'IN' Expr { Frontend.PVS.AbsRawPVSLang.Let $2 $4 }

Expr1 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr1
  : Expr2 { $1 }
  | Expr1 'OR' Expr2 { Frontend.PVS.AbsRawPVSLang.Or $1 $3 }

Expr2 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr2
  : Expr3 { $1 }
  | Expr2 'AND' Expr3 { Frontend.PVS.AbsRawPVSLang.And $1 $3 }

Expr3 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr3
  : Expr4 { $1 } | 'NOT' Expr4 { Frontend.PVS.AbsRawPVSLang.Not $2 }

Expr4 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr4
  : Expr5 { $1 }
  | Expr5 '=' Expr5 { Frontend.PVS.AbsRawPVSLang.Eq $1 $3 }
  | Expr5 '/=' Expr5 { Frontend.PVS.AbsRawPVSLang.Neq $1 $3 }
  | Expr5 '<' Expr5 { Frontend.PVS.AbsRawPVSLang.Lt $1 $3 }
  | Expr5 '<=' Expr5 { Frontend.PVS.AbsRawPVSLang.LtE $1 $3 }
  | Expr5 '>' Expr5 { Frontend.PVS.AbsRawPVSLang.Gt $1 $3 }
  | Expr5 '>=' Expr5 { Frontend.PVS.AbsRawPVSLang.GtE $1 $3 }

Expr5 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr5
  : Expr6 { $1 }
  | Expr5 '+' Expr6 { Frontend.PVS.AbsRawPVSLang.ExprAdd $1 $3 }
  | Expr5 '-' Expr6 { Frontend.PVS.AbsRawPVSLang.ExprSub $1 $3 }

Expr6 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr6
  : Expr7 { $1 }
  | Expr6 '*' Expr7 { Frontend.PVS.AbsRawPVSLang.ExprMul $1 $3 }
  | Expr6 '/' Expr7 { Frontend.PVS.AbsRawPVSLang.ExprDiv $1 $3 }
  | Expr6 'WITH' '[' Expr ':=' Expr ']' { Frontend.PVS.AbsRawPVSLang.With $1 $4 $6 }

Expr7 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr7
  : Expr8 { $1 }
  | '-' Expr8 { Frontend.PVS.AbsRawPVSLang.ExprNeg $2 }

Expr8 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr8
  : Expr9 { $1 }
  | Expr9 '^' Expr8 { Frontend.PVS.AbsRawPVSLang.ExprPow $1 $3 }

Expr9 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr9
  : Expr10 { $1 }
  | 'IF' Expr 'THEN' Expr 'ELSE' Expr 'ENDIF' { Frontend.PVS.AbsRawPVSLang.If $2 $4 $6 }
  | 'IF' Expr 'THEN' Expr ListElsIf 'ELSE' Expr 'ENDIF' { Frontend.PVS.AbsRawPVSLang.ListIf $2 $4 $5 $7 }
  | 'for' '(' Expr ',' Expr ',' Expr ',' LambdaExpr ')' { Frontend.PVS.AbsRawPVSLang.For $3 $5 $7 $9 }
  | 'for_down' '(' Expr ',' Expr ',' Expr ',' LambdaExpr ')' { Frontend.PVS.AbsRawPVSLang.ForDown $3 $5 $7 $9 }

Expr10 :: { Frontend.PVS.AbsRawPVSLang.Expr }
Expr10
  : '(' Expr ')' { $2 }
  | Expr10 '`' Integer { Frontend.PVS.AbsRawPVSLang.TupleIndex $1 $3 }
  | Expr10 '`' Id { Frontend.PVS.AbsRawPVSLang.RecordField $1 $3 }
  | '(#' ListRecordElem '#)' { Frontend.PVS.AbsRawPVSLang.RecordExpr $2 }
  | '(' ListExpr ')' { Frontend.PVS.AbsRawPVSLang.TupleExpr $2 }
  | Expr10 '(' ListExpr ')' { Frontend.PVS.AbsRawPVSLang.Call $1 $3 }
  | Id { Frontend.PVS.AbsRawPVSLang.ExprId $1 }
  | Integer { Frontend.PVS.AbsRawPVSLang.Int $1 }
  | Double { Frontend.PVS.AbsRawPVSLang.Rat $1 }
  | 'TRUE' { Frontend.PVS.AbsRawPVSLang.BTrue }
  | 'FALSE' { Frontend.PVS.AbsRawPVSLang.BFalse }

FieldDecls :: { Frontend.PVS.AbsRawPVSLang.FieldDecls }
FieldDecls
  : Id ':' Type { Frontend.PVS.AbsRawPVSLang.FieldDecls $1 $3 }

ListType :: { [Frontend.PVS.AbsRawPVSLang.Type] }
ListType : Type { (:[]) $1 } | Type ',' ListType { (:) $1 $3 }

ListFieldDecls :: { [Frontend.PVS.AbsRawPVSLang.FieldDecls] }
ListFieldDecls
  : FieldDecls { (:[]) $1 }
  | FieldDecls ',' ListFieldDecls { (:) $1 $3 }

Type :: { Frontend.PVS.AbsRawPVSLang.Type }
Type
  : Id { Frontend.PVS.AbsRawPVSLang.TypeSimple $1 }
  | 'fparray64' '(' Integer ')' { Frontend.PVS.AbsRawPVSLang.TypeDoubleArray $3 }
  | Id '(' Integer ',' Integer ')' { Frontend.PVS.AbsRawPVSLang.ParametricTypeBi $1 $3 $5 }
  | 'below' '(' Expr ')' { Frontend.PVS.AbsRawPVSLang.TypeBelow $3 }
  | '[#' ListFieldDecls '#]' { Frontend.PVS.AbsRawPVSLang.TypeRecord $2 }
  | '[' ListType ']' { Frontend.PVS.AbsRawPVSLang.TypeTuple $2 }
  | 'FUNCTION' '[' ListType '->' Type ']' { Frontend.PVS.AbsRawPVSLang.TypeFun $3 $5 }
  | '[' ListType '->' Type ']' { Frontend.PVS.AbsRawPVSLang.TypeFun2 $2 $4 }
  | 'list' '[' Type ']' { Frontend.PVS.AbsRawPVSLang.TypeList $3 }

ListArg :: { [Frontend.PVS.AbsRawPVSLang.Arg] }
ListArg : Arg { (:[]) $1 } | Arg ',' ListArg { (:) $1 $3 }

Arg :: { Frontend.PVS.AbsRawPVSLang.Arg }
Arg
  : ListId ':' Type { Frontend.PVS.AbsRawPVSLang.FArg $1 $3 }
  | ListId ':' Type '|' Expr { Frontend.PVS.AbsRawPVSLang.FArgGuard $1 $3 $5 }

Args :: { Frontend.PVS.AbsRawPVSLang.Args }
Args
  : ListArg { Frontend.PVS.AbsRawPVSLang.FArgs $1 }
  | ListId { Frontend.PVS.AbsRawPVSLang.FArgsNoType $1 }

ListDecl :: { [Frontend.PVS.AbsRawPVSLang.Decl] }
ListDecl : Decl { (:[]) $1 } | Decl ListDecl { (:) $1 $2 }

Decl :: { Frontend.PVS.AbsRawPVSLang.Decl }
Decl
  : Id ':' 'TYPE' '=' Type { Frontend.PVS.AbsRawPVSLang.DeclTypeAlias $1 $5 }
  | Id '(' Args ')' ':' Type '=' Expr { Frontend.PVS.AbsRawPVSLang.DeclFunction $1 $3 $6 $8 }
  | Id ':' Type '=' Expr { Frontend.PVS.AbsRawPVSLang.DeclConstant $1 $3 $5 }

Imp :: { Frontend.PVS.AbsRawPVSLang.Imp }
Imp : 'IMPORTING' ListId { Frontend.PVS.AbsRawPVSLang.LibImp $2 }

Program :: { Frontend.PVS.AbsRawPVSLang.Program }
Program
  : Id ':' 'THEORY' 'BEGIN' Imp ListDecl 'END' Id { Frontend.PVS.AbsRawPVSLang.ProgImp $1 $5 $6 $8 }
  | Id ':' 'THEORY' 'BEGIN' ListDecl 'END' Id { Frontend.PVS.AbsRawPVSLang.Prog $1 $5 $7 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
