PRECiSA/frontend/pvs/generated/Frontend/PVS/ParRawPVSLang.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from ParRawPVSLang.y
-----------------------------------------------------------------------------

state 121 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Double -> L_doubl                                  (1)
	Integer -> L_integ                                 (2)
	Id -> L_Id                                         (3)
	ListId -> Id                                       (4)
	ListId -> Id ',' ListId                            (5)
	ElsIf -> 'ELSIF' Expr 'THEN' Expr                  (6)
	ListElsIf -> ElsIf                                 (7)
	ListElsIf -> ElsIf ListElsIf                       (8)
	LetElem -> Id '=' Expr                             (9)
	LetElem -> Id ':' Type '=' Expr                    (10)
	ListLetElem -> LetElem                             (11)
	ListLetElem -> LetElem ',' ListLetElem             (12)
	RecordElem -> Id ':=' Expr                         (13)
	ListRecordElem -> RecordElem                       (14)
	ListRecordElem -> RecordElem ',' ListRecordElem    (15)
	LambdaKeyWord -> 'LAMBDA'                          (16)
	LambdaKeyWord -> 'lambda'                          (17)
	LambdaExpr -> LambdaKeyWord '(' Id ':' 'SUBRANGE' '(' Expr ',' Expr ')' ',' Id ':' Type ')' ':' Expr   (18)
	ListExpr -> Expr                                   (19)
	ListExpr -> Expr ',' ListExpr                      (20)
	Expr -> Expr1                                      (21)
	Expr -> 'LET' ListLetElem 'IN' Expr                (22)
	Expr1 -> Expr2                                     (23)
	Expr1 -> Expr1 'OR' Expr2                          (24)
	Expr2 -> Expr3                                     (25)
	Expr2 -> Expr2 'AND' Expr3                         (26)
	Expr3 -> Expr4                                     (27)
	Expr3 -> 'NOT' Expr4                               (28)
	Expr4 -> Expr5                                     (29)
	Expr4 -> Expr5 '=' Expr5                           (30)
	Expr4 -> Expr5 '/=' Expr5                          (31)
	Expr4 -> Expr5 '<' Expr5                           (32)
	Expr4 -> Expr5 '<=' Expr5                          (33)
	Expr4 -> Expr5 '>' Expr5                           (34)
	Expr4 -> Expr5 '>=' Expr5                          (35)
	Expr5 -> Expr6                                     (36)
	Expr5 -> Expr5 '+' Expr6                           (37)
	Expr5 -> Expr5 '-' Expr6                           (38)
	Expr6 -> Expr7                                     (39)
	Expr6 -> Expr6 '*' Expr7                           (40)
	Expr6 -> Expr6 '/' Expr7                           (41)
	Expr6 -> Expr6 'WITH' '[' Expr ':=' Expr ']'       (42)
	Expr7 -> Expr8                                     (43)
	Expr7 -> '-' Expr8                                 (44)
	Expr8 -> Expr9                                     (45)
	Expr8 -> Expr9 '^' Expr8                           (46)
	Expr9 -> Expr10                                    (47)
	Expr9 -> 'IF' Expr 'THEN' Expr 'ELSE' Expr 'ENDIF'   (48)
	Expr9 -> 'IF' Expr 'THEN' Expr ListElsIf 'ELSE' Expr 'ENDIF'   (49)
	Expr9 -> 'for' '(' Expr ',' Expr ',' Expr ',' LambdaExpr ')'   (50)
	Expr9 -> 'for_down' '(' Expr ',' Expr ',' Expr ',' LambdaExpr ')'   (51)
	Expr10 -> '(' Expr ')'                             (52)
	Expr10 -> Id '`' Integer                           (53)
	Expr10 -> Id '`' Id                                (54)
	Expr10 -> Id '(' ListExpr ')' '`' Integer          (55)
	Expr10 -> Id '(' ListExpr ')' '`' Id               (56)
	Expr10 -> '(#' ListRecordElem '#)'                 (57)
	Expr10 -> '(' ListExpr ')'                         (58)
	Expr10 -> Id '(' ListExpr ')'                      (59)
	Expr10 -> Id                                       (60)
	Expr10 -> Integer                                  (61)
	Expr10 -> Double                                   (62)
	Expr10 -> 'TRUE'                                   (63)
	Expr10 -> 'FALSE'                                  (64)
	FieldDecls -> Id ':' Type                          (65)
	ListType -> Type                                   (66)
	ListType -> Type ',' ListType                      (67)
	ListFieldDecls -> FieldDecls                       (68)
	ListFieldDecls -> FieldDecls ',' ListFieldDecls    (69)
	Type -> Id                                         (70)
	Type -> Id '(' Integer ',' Integer ')'             (71)
	Type -> 'below' '(' Expr ')'                       (72)
	Type -> '[#' ListFieldDecls '#]'                   (73)
	Type -> '[' ListType ']'                           (74)
	Type -> 'ARRAY' '[' ListType '->' Type ']'         (75)
	Type -> 'ArrayOf' '[' Integer ']' '[' Type ']'     (76)
	Type -> 'FUNCTION' '[' ListType '->' Type ']'      (77)
	Type -> '[' ListType '->' Type ']'                 (78)
	Type -> 'list' '[' Type ']'                        (79)
	ListArg -> Arg                                     (80)
	ListArg -> Arg ',' ListArg                         (81)
	Arg -> ListId ':' Type                             (82)
	Arg -> ListId ':' Type '|' Expr                    (83)
	Args -> ListArg                                    (84)
	Args -> ListId                                     (85)
	ListDecl -> Decl                                   (86)
	ListDecl -> Decl ListDecl                          (87)
	Decl -> Id ':' 'TYPE' '=' Type                     (88)
	Decl -> Id '(' Args ')' ':' Type '=' Expr          (89)
	Decl -> Id ':' Type '=' Expr                       (90)
	Imp -> 'IMPORTING' ListId                          (91)
	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListDecl 'END' Id   (92)
	Program -> Id ':' 'THEORY' 'BEGIN' ListDecl 'END' Id   (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#)'           { PT _ (TS _ 1) }
	'#]'           { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	'(#'           { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	'/='           { PT _ (TS _ 12) }
	':'            { PT _ (TS _ 13) }
	':='           { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'AND'          { PT _ (TS _ 20) }
	'ARRAY'        { PT _ (TS _ 21) }
	'ArrayOf'      { PT _ (TS _ 22) }
	'BEGIN'        { PT _ (TS _ 23) }
	'ELSE'         { PT _ (TS _ 24) }
	'ELSIF'        { PT _ (TS _ 25) }
	'END'          { PT _ (TS _ 26) }
	'ENDIF'        { PT _ (TS _ 27) }
	'FALSE'        { PT _ (TS _ 28) }
	'FUNCTION'     { PT _ (TS _ 29) }
	'IF'           { PT _ (TS _ 30) }
	'IMPORTING'    { PT _ (TS _ 31) }
	'IN'           { PT _ (TS _ 32) }
	'LAMBDA'       { PT _ (TS _ 33) }
	'LET'          { PT _ (TS _ 34) }
	'NOT'          { PT _ (TS _ 35) }
	'OR'           { PT _ (TS _ 36) }
	'SUBRANGE'     { PT _ (TS _ 37) }
	'THEN'         { PT _ (TS _ 38) }
	'THEORY'       { PT _ (TS _ 39) }
	'TRUE'         { PT _ (TS _ 40) }
	'TYPE'         { PT _ (TS _ 41) }
	'WITH'         { PT _ (TS _ 42) }
	'['            { PT _ (TS _ 43) }
	'[#'           { PT _ (TS _ 44) }
	']'            { PT _ (TS _ 45) }
	'^'            { PT _ (TS _ 46) }
	'`'            { PT _ (TS _ 47) }
	'below'        { PT _ (TS _ 48) }
	'for'          { PT _ (TS _ 49) }
	'for_down'     { PT _ (TS _ 50) }
	'lambda'       { PT _ (TS _ 51) }
	'list'         { PT _ (TS _ 52) }
	'|'            { PT _ (TS _ 53) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Double          rule  1
	Integer         rule  2
	Id              rule  3
	ListId          rules 4, 5
	ElsIf           rule  6
	ListElsIf       rules 7, 8
	LetElem         rules 9, 10
	ListLetElem     rules 11, 12
	RecordElem      rule  13
	ListRecordElem  rules 14, 15
	LambdaKeyWord   rules 16, 17
	LambdaExpr      rule  18
	ListExpr        rules 19, 20
	Expr            rules 21, 22
	Expr1           rules 23, 24
	Expr2           rules 25, 26
	Expr3           rules 27, 28
	Expr4           rules 29, 30, 31, 32, 33, 34, 35
	Expr5           rules 36, 37, 38
	Expr6           rules 39, 40, 41, 42
	Expr7           rules 43, 44
	Expr8           rules 45, 46
	Expr9           rules 47, 48, 49, 50, 51
	Expr10          rules 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64
	FieldDecls      rule  65
	ListType        rules 66, 67
	ListFieldDecls  rules 68, 69
	Type            rules 70, 71, 72, 73, 74, 75, 76, 77, 78, 79
	ListArg         rules 80, 81
	Arg             rules 82, 83
	Args            rules 84, 85
	ListDecl        rules 86, 87
	Decl            rules 88, 89, 90
	Imp             rule  91
	Program         rules 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	L_Id           shift, and enter state 5

	Id             goto state 3
	Program        goto state 4

State 1

	Double -> . L_doubl                                 (rule 1)

	L_doubl        shift, and enter state 2


State 2

	Double -> L_doubl .                                 (rule 1)

	'#)'           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	':='           reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'AND'          reduce using rule 1
	'ELSE'         reduce using rule 1
	'ELSIF'        reduce using rule 1
	'END'          reduce using rule 1
	'ENDIF'        reduce using rule 1
	'IN'           reduce using rule 1
	'OR'           reduce using rule 1
	'THEN'         reduce using rule 1
	'WITH'         reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	L_Id           reduce using rule 1


State 3

	Program -> Id . ':' 'THEORY' 'BEGIN' Imp ListDecl 'END' Id    (rule 92)
	Program -> Id . ':' 'THEORY' 'BEGIN' ListDecl 'END' Id    (rule 93)

	':'            shift, and enter state 6


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	Id -> L_Id .                                        (rule 3)

	'#)'           reduce using rule 3
	'#]'           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'->'           reduce using rule 3
	'/'            reduce using rule 3
	'/='           reduce using rule 3
	':'            reduce using rule 3
	':='           reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'AND'          reduce using rule 3
	'ELSE'         reduce using rule 3
	'ELSIF'        reduce using rule 3
	'END'          reduce using rule 3
	'ENDIF'        reduce using rule 3
	'IN'           reduce using rule 3
	'OR'           reduce using rule 3
	'THEN'         reduce using rule 3
	'WITH'         reduce using rule 3
	']'            reduce using rule 3
	'^'            reduce using rule 3
	'`'            reduce using rule 3
	'|'            reduce using rule 3
	L_Id           reduce using rule 3
	%eof           reduce using rule 3


State 6

	Program -> Id ':' . 'THEORY' 'BEGIN' Imp ListDecl 'END' Id    (rule 92)
	Program -> Id ':' . 'THEORY' 'BEGIN' ListDecl 'END' Id    (rule 93)

	'THEORY'       shift, and enter state 7


State 7

	Program -> Id ':' 'THEORY' . 'BEGIN' Imp ListDecl 'END' Id    (rule 92)
	Program -> Id ':' 'THEORY' . 'BEGIN' ListDecl 'END' Id    (rule 93)

	'BEGIN'        shift, and enter state 8


State 8

	Program -> Id ':' 'THEORY' 'BEGIN' . Imp ListDecl 'END' Id    (rule 92)
	Program -> Id ':' 'THEORY' 'BEGIN' . ListDecl 'END' Id    (rule 93)

	'IMPORTING'    shift, and enter state 13
	L_Id           shift, and enter state 5

	Id             goto state 9
	ListDecl       goto state 10
	Decl           goto state 11
	Imp            goto state 12

State 9

	Decl -> Id . ':' 'TYPE' '=' Type                    (rule 88)
	Decl -> Id . '(' Args ')' ':' Type '=' Expr         (rule 89)
	Decl -> Id . ':' Type '=' Expr                      (rule 90)

	'('            shift, and enter state 19
	':'            shift, and enter state 20


State 10

	Program -> Id ':' 'THEORY' 'BEGIN' ListDecl . 'END' Id    (rule 93)

	'END'          shift, and enter state 18


State 11

	ListDecl -> Decl .                                  (rule 86)
	ListDecl -> Decl . ListDecl                         (rule 87)

	'END'          reduce using rule 86
	L_Id           shift, and enter state 5

	Id             goto state 9
	ListDecl       goto state 17
	Decl           goto state 11

State 12

	Program -> Id ':' 'THEORY' 'BEGIN' Imp . ListDecl 'END' Id    (rule 92)

	L_Id           shift, and enter state 5

	Id             goto state 9
	ListDecl       goto state 16
	Decl           goto state 11

State 13

	Imp -> 'IMPORTING' . ListId                         (rule 91)

	L_Id           shift, and enter state 5

	Id             goto state 14
	ListId         goto state 15

State 14

	ListId -> Id .                                      (rule 4)
	ListId -> Id . ',' ListId                           (rule 5)

	')'            reduce using rule 4
	','            shift, and enter state 37
	':'            reduce using rule 4
	L_Id           reduce using rule 4


State 15

	Imp -> 'IMPORTING' ListId .                         (rule 91)

	L_Id           reduce using rule 91


State 16

	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListDecl . 'END' Id    (rule 92)

	'END'          shift, and enter state 36


State 17

	ListDecl -> Decl ListDecl .                         (rule 87)

	'END'          reduce using rule 87


State 18

	Program -> Id ':' 'THEORY' 'BEGIN' ListDecl 'END' . Id    (rule 93)

	L_Id           shift, and enter state 5

	Id             goto state 35

State 19

	Decl -> Id '(' . Args ')' ':' Type '=' Expr         (rule 89)

	L_Id           shift, and enter state 5

	Id             goto state 14
	ListId         goto state 31
	ListArg        goto state 32
	Arg            goto state 33
	Args           goto state 34

State 20

	Decl -> Id ':' . 'TYPE' '=' Type                    (rule 88)
	Decl -> Id ':' . Type '=' Expr                      (rule 90)

	'ARRAY'        shift, and enter state 23
	'ArrayOf'      shift, and enter state 24
	'FUNCTION'     shift, and enter state 25
	'TYPE'         shift, and enter state 26
	'['            shift, and enter state 27
	'[#'           shift, and enter state 28
	'below'        shift, and enter state 29
	'list'         shift, and enter state 30
	L_Id           shift, and enter state 5

	Id             goto state 21
	Type           goto state 22

State 21

	Type -> Id .                                        (rule 70)
	Type -> Id . '(' Integer ',' Integer ')'            (rule 71)

	'#]'           reduce using rule 70
	'('            shift, and enter state 55
	')'            reduce using rule 70
	','            reduce using rule 70
	'->'           reduce using rule 70
	'='            reduce using rule 70
	'END'          reduce using rule 70
	']'            reduce using rule 70
	'|'            reduce using rule 70
	L_Id           reduce using rule 70


State 22

	Decl -> Id ':' Type . '=' Expr                      (rule 90)

	'='            shift, and enter state 54


State 23

	Type -> 'ARRAY' . '[' ListType '->' Type ']'        (rule 75)

	'['            shift, and enter state 53


State 24

	Type -> 'ArrayOf' . '[' Integer ']' '[' Type ']'    (rule 76)

	'['            shift, and enter state 52


State 25

	Type -> 'FUNCTION' . '[' ListType '->' Type ']'     (rule 77)

	'['            shift, and enter state 51


State 26

	Decl -> Id ':' 'TYPE' . '=' Type                    (rule 88)

	'='            shift, and enter state 50


State 27

	Type -> '[' . ListType ']'                          (rule 74)
	Type -> '[' . ListType '->' Type ']'                (rule 78)

	'ARRAY'        shift, and enter state 23
	'ArrayOf'      shift, and enter state 24
	'FUNCTION'     shift, and enter state 25
	'['            shift, and enter state 27
	'[#'           shift, and enter state 28
	'below'        shift, and enter state 29
	'list'         shift, and enter state 30
	L_Id           shift, and enter state 5

	Id             goto state 21
	ListType       goto state 48
	Type           goto state 49

State 28

	Type -> '[#' . ListFieldDecls '#]'                  (rule 73)

	L_Id           shift, and enter state 5

	Id             goto state 45
	FieldDecls     goto state 46
	ListFieldDecls goto state 47

State 29

	Type -> 'below' . '(' Expr ')'                      (rule 72)

	'('            shift, and enter state 44


State 30

	Type -> 'list' . '[' Type ']'                       (rule 79)

	'['            shift, and enter state 43


State 31

	Arg -> ListId . ':' Type                            (rule 82)
	Arg -> ListId . ':' Type '|' Expr                   (rule 83)
	Args -> ListId .                                    (rule 85)

	')'            reduce using rule 85
	':'            shift, and enter state 42


State 32

	Args -> ListArg .                                   (rule 84)

	')'            reduce using rule 84


State 33

	ListArg -> Arg .                                    (rule 80)
	ListArg -> Arg . ',' ListArg                        (rule 81)

	')'            reduce using rule 80
	','            shift, and enter state 41


State 34

	Decl -> Id '(' Args . ')' ':' Type '=' Expr         (rule 89)

	')'            shift, and enter state 40


State 35

	Program -> Id ':' 'THEORY' 'BEGIN' ListDecl 'END' Id .    (rule 93)

	%eof           reduce using rule 93


State 36

	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListDecl 'END' . Id    (rule 92)
